--- a/engines/kom/README
+++ b/engines/kom/README
@@ -10,17 +10,16 @@ oavtal@bezeqint.net
 or
 salty-horse @ irc://freenode.net/scummvm
 
-
 ------------------------------------------------------------
 
-This is a darcs repository.
-It allows you to easily fetch the latest changes, make changes of your own, and
-send them as patches via email.
+The code is hosted on a Darcs repository.
+Darcs is a version control system. It allows you to easily fetch the latest
+changes, make changes of your own, and send them as patches via email.
 
 To check-out the repository, run:
-$ darcs get http://ori.codemongers.com/repos/kom
+$ darcs get http://www2.mta.ac.il/~oravtali/repos/kom/
 
 To get the latest changes, run:
 $ darcs pull
 
-For more information, visit http://darcs.net
+For more information about Darcs, visit http://darcs.net
