KOM: Update email

--- a/engines/kom/README
+++ b/engines/kom/README
@@ -6,7 +6,7 @@ To use:
 * Copy the files in this repository to scummvm/engines/kom/
 
 Please contact me if you want to help:
-oavtal@bezeqint.net
+ori <at> avtalion <dot> name
 or
 salty-horse @ irc://freenode.net/scummvm
 
