--- a/engines/kom/TODO
+++ b/engines/kom/TODO
@@ -2,4 +2,4 @@
 * Character scaling doesn't work like the original
 * In the first room, thidney appears before the teleport animation (maybe having the welcoming screens can fix that
 * Some actions (e.g. the donut) distinguish between a click and a "held" click. Maybe it should be implemented
-* Right click doesn't work in the inventory
+* Clicking on items in the inventory does a "button press" effect that depends on how long the left click is pressed. The original behaves differently if it's a short or long click. The current implementation only has a "short click" which doesn't show the effect nicely.
