KOM: Smacker video support. Initial narrator support.

--- a/engines/kom/TODO
+++ b/engines/kom/TODO
@@ -2,12 +2,24 @@ BUGS
 ====
 * When leaving the treehouse, there's a glitch in the graphics
 * Character scaling doesn't work like the original
-* In the first room, thidney appears before the teleport animation (maybe having the welcoming screens can fix that
-* Some actions (e.g. the donut) distinguish between a click and a "held" click. Maybe it should be implemented
-* Clicking on items in the inventory does a "button press" effect that depends on how long the left click is pressed. The original behaves differently if it's a short or long click. The current implementation only has a "short click" which doesn't show the effect nicely.
-* Switching between night and day doesn't update the standing characters' actors. example: spiders in room 95
+* In the first room, thidney appears before the teleport animation (maybe
+  having the welcoming screens can fix that)
+* Some actions (e.g. the donut) distinguish between a click and a "held" click.
+  Maybe it should be implemented.
+* Clicking on items in the inventory does a "button press" effect that depends
+  on how long the left click is pressed. The original behaves differently if
+  it's a short or long click. The current implementation only has a "short
+  click" which doesn't show the effect nicely.
+* Switching between night and day doesn't update the standing characters'
+  actors. example: spiders in room 95
+* Executing donut actions while walking will move thidney to the old position
+  and make the cursor disappear (until right-click)
 
 MISSING FEATURES
 ================
 * Pause support, GMM - <http://wiki.scummvm.org/index.php/Advanced_Engine_Features#Improved_pause_support>
 * Graphics transaction extension - <http://article.gmane.org/gmane.games.devel.scummvm/4619>
+
+
+
+* hide the room loading in blank screen at the end of smk playback?
