--- a/engines/kom/TODO
+++ b/engines/kom/TODO
@@ -14,6 +14,7 @@ BUGS
   and make the cursor disappear (until right-click).
 * don't try showing "loading" icon while narrator subtitles are on.
 * narrator subtitles disappear when the audio stops, even before they finish scrolling.
+* room 34 -- "look at" and "use" on the arcade machine doesn't play the "rupert" audio
 
 MISSING FEATURES
 ================
